# hera-agent

./: .dockerignore  .env.example  .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_v0.0.142.md  ROADMAP.md  constraints-termux.txt  env.example  flake.nix  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  setup_help.md
.github/workflows/: deploy-site.yml  docker-publish.yml  docs-site-checks.yml  nix.yml  supply-chain-audit.yml  tests.yml
acp_registry/: agent.json
assets/: banner.txt
configs/: SOUL.md  hera.example.yaml
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  trajectory_compression.yaml  web_research.yaml
deployments/: Dockerfile  Dockerfile.full  docker-compose.full.yml  docker-compose.yml  docker-entrypoint.sh  hera.service
docker/: SOUL.md  entrypoint.sh
landingpage/: index.html  script.js  style.css
nix/: checks.nix  configMergeScript.nix  devShell.nix  nixosModules.nix  packages.nix
plugins/: README.md  context_engine.go  context_engine_base.go  context_engine_test.go  memory_provider.go  plugin.go  plugin_test.go
scripts/: discord-voice-doctor.sh  docker-build.sh  hera-gateway  install.cmd  install.ps1  install.sh  kill_modal.sh  release.sh  sample_and_compress.sh
scripts/mcp-python/: README.md  pyproject.toml
scripts/mcp-python/hera_python_mcp/: __init__.py  __main__.py  exec_tool.py  paths.py  registry.py  server.py  venv.py
scripts/mcp-python/tests/: test_exec.py  test_registry.py
(+1149 files in other folders)
